fix: long tails on mobile

--- a/src/templates/senders.module.scss
+++ b/src/templates/senders.module.scss
@@ -6,7 +6,11 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-gap: 70px;
 
-  @media (max-width: 768px) {
+  @media (max-width: 1050px) {
+    grid-gap: 20px;
+  }
+
+  @media (max-width: 900px) {
     display: flex;
     flex-direction: column;
     max-width: 600px;
@@ -42,8 +46,8 @@
 }
 
 .container-text {
-  @media (max-width: 768px) {
-    margin-bottom: 70px;
+  @media (max-width: 900px) {
+    margin-bottom: 0;
   }
 }
 
@@ -56,8 +60,12 @@
   .container-image {
     text-align: right;
 
-    @media (max-width: 768px) {
+    @media (max-width: 900px) {
       max-width: 500px;
+    }
+
+    @media (max-width: 450px) {
+      max-width: 350px;
     }
   }
 }
@@ -80,7 +88,7 @@ h1.tagline {
     max-width: 340px;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 900px) {
     margin: 0 auto 30px auto;
   }
 
@@ -123,7 +131,7 @@ h1.tagline {
   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
   grid-column-gap: 50px;
 
-  @media (max-width: 768px) {
+  @media (max-width: 900px) {
     display: flex;
     flex-direction: column;
     margin-top: 90px;
@@ -135,7 +143,7 @@ h1.tagline {
     font-size: 14px;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 900px) {
     font-size: 16px;
   }
 }
@@ -178,7 +186,7 @@ h1.tagline {
   margin: 0 auto 100px auto;
   grid-template-columns: repeat(2, minmax(0, 1fr));
 
-  @media (max-width: 768px) {
+  @media (max-width: 900px) {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -206,7 +214,7 @@ h1.tagline {
     max-height: 400px;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 900px) {
     width: 300px;
     max-width: 100%;
     margin: 50px auto 0;
@@ -297,13 +305,23 @@ h1.tagline {
 }
 
 .unsubscribe-illustation {
-  background-image: url(../assets/mail-list-illustration-twitter-walmart.png);
   background-image: url(../assets/mail-list-illustration-facebook-amazon.png);
   width: 410px;
   height: 300px;
   background-size: 410px auto;
   background-repeat: no-repeat;
   background-position: center center;
+
+  [data-name='facebook'],
+  [data-name='amazon'] {
+    background-image: url(../assets/mail-list-illustration-twitter-walmart.png);
+  }
+
+  @media (max-width: 450px) {
+    width: 350px;
+    height: 180px;
+    background-size: 350px auto;
+  }
 }
 
 .unsubscribe-example-block {
@@ -318,6 +336,11 @@ h1.tagline {
   align-items: center;
   font-size: 14px;
   padding: 0 20px;
+
+  @media (max-width: 450px) {
+    font-size: 11px;
+    padding: 0 17px;
+  }
 }
 
 .company-image {
@@ -327,6 +350,11 @@ h1.tagline {
   border-radius: 2px;
   img {
     max-width: 100%;
+  }
+
+  @media (max-width: 450px) {
+    height: 30px;
+    width: 30px;
   }
 }
 .company-description {
